# elrond-wasm-rs

./: Dockerfile  sdk.bat  sdk.sh
contracts/examples/: Dockerfile
contracts/examples/lottery-egld/src/: lib.rs
contracts/examples/non-fungible-tokens/: Cargo.toml  README.MD  deploy.json  erdpy.data-storage.json  sdk.bat  snippets.sh
contracts/examples/non-fungible-tokens/abi/: Cargo.toml
contracts/examples/non-fungible-tokens/abi/src/: main.rs
contracts/examples/non-fungible-tokens/src/: lib.rs  token.rs
contracts/examples/non-fungible-tokens/testnet/proxy/config/: config.toml
contracts/examples/non-fungible-tokens/testnet/seednode/config/: p2p.toml
contracts/examples/non-fungible-tokens/testnet/validator00/config/: api.toml  genesisSmartContracts.json  p2p.toml
contracts/examples/non-fungible-tokens/testnet/validator01/config/: config.toml  nodesSetup.json  p2p.toml  systemSmartContractsConfig.toml
contracts/examples/non-fungible-tokens/wasm/: Cargo.toml
contracts/examples/simple-erc20/: Cargo.toml  erdpy.data-storage.json  run.sh  snippets.sh
contracts/examples/simple-erc20/src/: lib.rs
