[package]
name = "non-fungible-tokens"
version = "0.0.1"
authors = [ "dorin-iancu <dorin.iancu@elrond.com>","hhoareau@gmail.com"]
edition = "2018"

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = [ "elrond-wasm-node",]

[dependencies.elrond-wasm]
version = "0.10.4"

[dependencies.elrond-wasm-derive]
version = "0.10.4"

[dependencies.elrond-wasm-node]
version = "0.10.4"
optional = true

[dev-dependencies.elrond-wasm-debug]
version = "0.10.4"

[dependencies.rust-crypto-wasm]
version = "0.3.1"


